# IDS706-8-Rust-RewriteProject5

./: Cargo.toml  README.md
.github/workflows/: format.yml  lint.yml  main.yml  test.yml
data/: stock_AAPL.csv  stock_AAPL.db
src/: lib.rs  main.rs
