[package]
name = "rust_stock_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.44.2", features = ["csv", "lazy"] }
plotters = "0.3.1"



# Optional dependencies for CI/CD pipeline
# [dependencies.clippy]
# version = "0.1"
# optional = true

# [dependencies.rustfmt]
# version = "0.1"
# optional = true
